cmss/main/default/objects/AssetChange__c/AssetChange__c.object-meta.xml
<CustomObject>
    <description>Změny smlouvy, entita pro stav. spoření, meziúvěr, úvěr</description>
    <label>Asset Change</label>
    <nameField>
        <label>AssetChange Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>