cmss/main/default/objects/AssetChange__c/fields/ChangeAuthor__c.field-meta.xml
<CustomField>
    <fullName>ChangeAuthor__c</fullName>
    <description>ČPÚ, příjmení, jméno zprostředkovatele změny</description>
    <label>Change Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>