cmss/main/default/objects/AssetChange__c/fields/ChangeClosureDate__c.field-meta.xml
<CustomField>
    <fullName>ChangeClosureDate__c</fullName>
    <description>Datum uzavření změny</description>
    <label>Change Closure Date</label>
    <type>DateTime</type>
</CustomField>