cmss/main/default/objects/AssetChange__c/fields/ChangeType__c.field-meta.xml
<CustomField>
    <fullName>ChangeType__c</fullName>
    <description>Druh změny</description>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>