cmss/main/default/objects/AssetChange__c/fields/NewContractConditions__c.field-meta.xml
<CustomField>
    <fullName>NewContractConditions__c</fullName>
    <description>Nové VOP</description>
    <label>New Contract Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>104</fullName>
            </value>
            <value>
                <fullName>114</fullName>
            </value>
            <value>
                <fullName>306</fullName>
            </value>
            <value>
                <fullName>405</fullName>
            </value>
            <value>
                <fullName>612</fullName>
            </value>
            <value>
                <fullName>704</fullName>
            </value>
            <value>
                <fullName>901</fullName>
            </value>
            <value>
                <fullName>993</fullName>
            </value>
            <value>
                <fullName>1102</fullName>
            </value>
            <value>
                <fullName>1195</fullName>
            </value>
            <value>
                <fullName>518</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>